before/overlays/staging/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: staging-nginx
spec:
  metadata:
    labels:
      app: staging-nginx
  template:
    metadata:
      labels:
        app: staging-nginx
    spec:
      containers:
      - imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
        name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
      imagePullSecrets:
      - name: gitlab
