before/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: staging-nginx
  ports:
  - name: http-app
    port: 80
